[tool.poetry]
name = "modalgen"
version = "0.1.0"
description = ""
authors = ["Peyton Walters <pawalt@hey.com>"]

[tool.poetry.dependencies]
python = "^3.10"
modal = "^0.62.181"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
